# ever

./: Cargo.toml  README.md
.github/workflows/: test.yml
core/: Cargo.toml
core/src/: lib.rs
core/tests/: ever.rs  vars.rs
macro/: Cargo.toml
macro/src/: lib.rs  vars.rs
tests/arg/: Cargo.toml
tests/arg/src/: main.rs
tests/noarg/: Cargo.toml
tests/noarg/src/: main.rs
