[package]
name = "ever"
version = "0.2.0"
authors = ["YushiOMOTE <yushiomote@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Print the build information of your program with minimal boilerplate"

[dependencies]
ever-macro = { version = "0.2", path = "../macro" }
proc-macro-hack = "0.5"

[dev-dependencies]
chrono = "0.4"
regex = "1.4"
cargo-lock = "6.0"
semver = "0.11"
