[package]
name = "ever-macro"
version = "0.2.0"
authors = ["YushiOMOTE <yushiomote@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Helper macro for `ever`, which prints the build information with minimal boilerplate."
homepage = "https://github.com/yushiomote/ever"
repository = "https://github.com/yushiomote/ever"
documentation = "https://docs.rs/ever"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
quote = "0.6"
syn = "0.15"
proc-macro2 = "0.4"
proc-macro-hack = "0.5"
whoami = "1.0"
rustc_version = "0.3"
git2 = "0.13"
chrono = "0.4"
cargo_metadata = "0.12"
